# neurohub

./: .dockerignore  .env.example  .gitignore  .markdownlint.yml  BACKEND_HOSTING_GUIDE.md  CLAUDE.md  CLOUD_QUICK_START.md  CLOUD_SETUP_STUDENT_GUIDE.md  CODE_REVIEW_SUMMARY.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  CREATE_CLEAN_REPO.sh  DECISION_REGISTRY.md  DEMO_RESULTS.md  Dockerfile  GIT_PUSH_CHECKLIST.md  INSTRUCTOR_NOTES.md  INSTRUCTOR_PRESENTATION.md  INSTRUCTOR_QUICK_DEPLOY.md  LICENSE  MCP_VS_A2A_EXPLANATION.md  Makefile  OMI_MCP_OFFICIAL_REFERENCE.md  PUSH_COMMANDS.sh  PUSH_TO_NEUROHUB.sh  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_WITH_APIS.md  README-neurohub.md  README.md  README_FOR_STUDENTS.md  REPO_MIGRATION_CHECKLIST.md  SECURITY_AUDIT.md  STUDENT_GUIDE.md  STUDENT_QUICK_REFERENCE.md  TODO.md  UV_COMMANDS_GUIDE.md  WORKING_DEMO_SUMMARY.md  WORKSHOP_DEPLOYMENT_GUIDE.md  WORKSHOP_HACKATHON_GUIDE.md  (+14 more)
.github/workflows/: deploy.yml  docs-check.yml
agents/: neuro_demo.py  neuro_demo_simple.py
agents/action_planning/: Dockerfile  agent.py
agents/communication/: Dockerfile  agent.py
agents/context_analysis/: Dockerfile  agent.py
agents/examples/: __init__.py  collaboration_agent.py  research_agent.py
agents/knowledge/: Dockerfile  agent.py
agents/omi_gateway/: Dockerfile  README.md  agent.py  agent_card.json
agents/templates/: __init__.py  agent_builder.py
config/: claude_desktop_config.example.json  settings.py
core/: __init__.py  a2a_client.py  a2a_wrappers.py
demo/scenarios/: meeting_assistant.py
demo/ui/: Dockerfile
docs/: ARCHITECTURE_VISUAL.md  MEMORY_INTEGRATION.md  NEURO_AGENTS.md  NEURO_AGENTS_WORKSHOP.md  README.md
docs/adr/: 001-use-a2a-protocol.md  002-agent-orchestration-pattern.md  003-docker-deployment.md  004-websocket-omi-integration.md  005-llm-context-analysis.md  006-agentdb-integration.md  007-uv-package-manager.md  008-cloud-deployment.md  009-simplified-demo.md  (+6 more)
integrations/: __init__.py  agentdb_manager.py  airtable_connector.py  mem0_storage.py  memory_bridge.py  omi_connector.py
nginx/: nginx.conf
scripts/: deploy_fly.sh  monitor_workshop.sh  run_demo_cloud.sh  setup_team.sh  start_omi_mcp.sh  stop_omi_mcp.sh  test_agentdb.py  test_airtable_integration.py  test_omi_connection.py  test_workshop_setup.py  test_workshop_setup.sh  workshop_deploy.sh
static/: index.html  index_enhanced.html
tests/: __init__.py  test_demo_simple.py  test_memory_bridge.py  test_memory_integration.py  test_workshop_agents.py
(+12 files in other folders)
